<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_init"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <include layout="@layout/tool_bar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingTop="50dp"
            android:text="@string/player_main"
            android:textColor="@color/textPrimary"
            android:textSize="50sp"
            android:textStyle="italic|bold" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/text_default"
            android:textColor="@color/textSecondary"
            android:background="@color/colorRadio"
            android:textSize="20sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="0.5">

        <TextView
            android:id="@+id/ranking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/ranking_main"
            android:textColor="@color/textPrimary"
            android:textSize="30sp"
            android:textStyle="italic" />
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="0.2">

        <Button
            android:id="@+id/start_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:text="@string/start_main"
            android:textSize="20sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <Button
            android:id="@+id/outPlayer_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:text="@string/out_main"
            android:textSize="20sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/selectCategory_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="10dp"
            android:text="@string/select_main"
            android:textSize="20sp"
            android:textStyle="italic" />
    </RelativeLayout>


    <include layout="@layout/view_bottom" />
</LinearLayout>