<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@drawable/gradient_icon"
    android:elevation="4dp"
    android:paddingHorizontal="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/contentIcon_bar"
                android:src="@drawable/icon_app" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="30dp"
                android:fontFamily="@font/jetbrains_mono_thin"
                android:text="@string/app_name"
                android:textColor="@color/colorRadio"
                android:textSize="30sp"
                android:textStyle="bold|italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1">

            <ImageButton
                android:id="@+id/help_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_centerInParent="true"
                android:background="@color/transparent"
                android:contentDescription="@string/help_bar"
                android:scaleType="fitXY"
                android:src="@drawable/info" />
        </RelativeLayout>
    </LinearLayout>
</androidx.appcompat.widget.Toolbar>